# state-task-graph-engine

./: .gitignore  Cargo.toml  README.md
.rpiv/artifacts/handoffs/: 2026-05-19_04-16-54_context-handover-agent-adapterReady.md  2026-05-19_08-39-35_pr2-graph-engine-client.md
.rpiv/artifacts/reviews/: 2026-05-17_17-39-53_pr1-cli-skeleton-init.md  2026-05-17_19-46-47_pr2-validation-engine.md  2026-05-17_19-46-47_pr3-reconciliation-engine.md  2026-05-17_22-45-00_pr4-append-nodes.md  2026-05-18_07-17-41_pr5-state-commands.md  2026-05-18_09-19-54_pr6-query-commands.md  2026-05-18_21-24-41_480aa9b.md
.rpiv/handoffs/: handoff-2026-05-18_06-58-00.md
docs/: agent-integration-protocol.md  api-reference.md  architecture.md  error-codes.md  installation.md  integration-guide.md  troubleshooting.md
fixtures/: sample_events.jsonl  sample_graph.yaml
src/: cli.rs  error.rs  io.rs  main.rs  model.rs  reconcile.rs  response.rs
tests/: init.rs  reconcile.rs  validate.rs
