[package]
name = "state-task-graph-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
assert_fs = "1"